tests/NormalTests/paczka1/small_fuzzy/56896255.err
Error in line 4: A416 S688 457,0
Error in line 6: 7bBjdVO0LN S319 19,5
Error in line 2: ybDM S688 31,7
